Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -183,7 +183,8 @@
    },
    "outputs": [],
    "source": [
-    "position = \"Ceo\" # 'CEO'"
+    "position = \"Ceo\" # 'CEO'\n",
+    "position.upper()"
    ]
   },
   {
