Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -275,7 +275,7 @@
    "outputs": [],
    "source": [
     "phone_number = \"7285553334\" # 728\n",
-    "phone_number[:]"
+    "phone_number[:2]"
    ]
   },
   {
